welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:5: error: not found: value min
    return min(a,b)
           ^maxMod5:7: error: not found: value max
    return max(a,b)
           ^